--- a/04_index.html
+++ b/04_index.html
@@ -76,7 +76,7 @@
     <section class="section">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-12" data-aos="fade-up">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50">
             <h2>04: 3D design and printing</h2>
           </div>
         </div>
@@ -84,18 +84,18 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
             <h3 class="h3">Photogrammetry</h3>
             <p>For the photogrammatery assignment, I used the Polycam App on iOS to scan a plant. I tried both the LiDAR & photo scanner. Although the LiDAR scan processed much more quickly (~3min vs. 15min), there were gaping holes in the model and it also scanned a part of the back wall. I tried it a few times with no luck. As the comparison chart shows, the LiDAR scanner is better for spaces while photos are better for objects that require more preicision. </p>
           </div>
-          <div class="col-md-1" data-aos="fade-up"></div>
-          <div class="col-md-2" data-aos="fade-up">
+          <div class="col-md-1" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50"></div>
+          <div class="col-md-2" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/lidarvsphoto.jpg" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-2" data-aos="fade-up">
+          <div class="col-md-2" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
             <img src="04_3D/lidarprocess.jpg" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-2" data-aos="fade-up">
+          <div class="col-md-2" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
             <img src="04_3D/photoprocess.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -103,11 +103,11 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" >
             <img src="04_3D/lidarvideo.gif" alt="Image" class="img-fluid">
             <figcaption>LiDAR scan output</figcaption>
           </div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/photovid.gif" alt="Image" class="img-fluid">
             <figcaption>Photo scan output</figcaption>
           </div>
@@ -116,14 +116,14 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50">
             <h3 class="h3">3D Printing - test run</h3>
             <p>For my test print, I quickly modelled a vase in Fusion360 using the revolve command. The first print failed because I scaled down the vase so it would print faster and it ended up being too thin. The second print also failed halfway, but third time was the charm!</p>
           </div>
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/vasefusion1.png" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/vasefusion2.png" alt="Image" class="img-fluid">
           </div>
       </div>
@@ -131,15 +131,15 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/vasefail.JPG" alt="Image" class="img-fluid">
             <figcaption>Failed prints :(</figcaption>
           </div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/vaseprint.JPG" alt="Image" class="img-fluid">
             <figcaption>Printing in action</figcaption>
           </div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/vase2.JPG" alt="Image" class="img-fluid">
             <figcaption>She survived!</figcaption>
           </div>
@@ -147,23 +147,23 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50">
             <h3 class="h3">3D Printing - Eames Chair LCW</h3>
             <p>I wanted to challenge myself this week and learn how to model in Rhino. I decided to model the Eames LCW Chair since it contained many curves and undercuts which would be difficult to make using other subtractive methods. It also gave me the opportunity to learn a ton of Rhino commands such as: sweep1, loft, offsetsrf, edgesrf, cap, boolean union/split, rebuild, orientonsrf, filletedge, and more.</p>
             <p>I started by creating sketches of the front, side and top views of the chair. Then, I created 3D shapes using the 2D sketch as a guide. This took a lot of time (10+ hours!) since it was my first time figuring out all the Rhino commands and there were so many curves and angles. </p>
           </div>
-          <div class="col-md-2" data-aos="fade-up"></div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-2" data-aos="fade-up" data-aos-delay="50"></div>
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/eames_front.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/eames_sketch.png" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/eames_3D.png" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -171,31 +171,31 @@
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50">
             <p>3D printing turned out to be an even greater challenge than modelling. Instead of printing the entire chair, I exploded it into separate parts as I realized that if there were support structures between the tiny gap between the seat and the back structure, it would be impossible to take out. However, I still ran into several issues with each print - the print either failed or I wasn't able to remove the support structure. I tried using pliers and sanding it down but it didn't work well. I assume it was either because of the filament or because the support structure was too thick.
             </p>
           </div>
-          <div class="col-md-1" data-aos="fade-up"></div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-1" data-aos="fade-up" data-aos-delay="50"></div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/prusa1.png" alt="Image" class="img-fluid">
           </div>
         </div>
 
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/print_fail1.JPG" alt="Image" class="img-fluid">
             <figcaption>Print failed :(</figcaption>
           </div>
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/print_fail2.JPG" alt="Image" class="img-fluid">
             <figcaption>Print succeeded :)</figcaption>
           </div>
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/print_fail3.JPG" alt="Image" class="img-fluid">
             <figcaption>Couldn't remove support easily :(</figcaption>
           </div>
-          <div class="col-md-3" data-aos="fade-up">
+          <div class="col-md-3" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/print_fail4.JPG" alt="Image" class="img-fluid">
             <figcaption>Removed support but print didn't finish :(</figcaption>
           </div>
@@ -203,11 +203,11 @@
 
      <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50">
             <p>For the nth round of iterations, I shrunk the model a bit to save on printing time and turned the problematic pieces upright so that there would be less support structure, thus making it easier to remove.</p>
           </div>
-          <div class="col-md-1" data-aos="fade-up"></div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-1" data-aos="fade-up" data-aos-delay="50"></div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/prusa2.png" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -216,27 +216,27 @@
 
      <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-5" data-aos="fade-up">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="50">
             <p>And finally...the print succeeded!<br><br>
             <a download href='04_3D/Chair3Dv3.7_3Dprint.3dm' class="button">Download 3dm file</a><br><br>
             <a download href='04_3D/eamesv4.stl' class="button">Download STL file</a><br><br>
             <a download href='04_3D/eamesLCW.gcode' class="button">Download Gcode file</a></p>
           </div>
-          <div class="col-md-1" data-aos="fade-up"></div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-1" data-aos="fade-up" data-aos-delay="50"></div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/printsuccess.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
      <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/chairfinal3.jpg" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/chairfinal2.jpg" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="04_3D/chairfinal4.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
