--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="150">
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="01_index.html" class="item-wrap fancybox">
               <div class="work-info">
@@ -119,7 +119,7 @@
               <img class="img-fluid" src="04_3D/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>05: microcontroller programming</h3>
@@ -127,7 +127,7 @@
               <img class="img-fluid" src="comingsoon.png">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>06: electronic input devices</h3>
