--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
             </div>
           </div>
         </div>
+
+
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="150">
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="01_index.html" class="item-wrap fancybox">
@@ -108,7 +110,7 @@
               <div class="work-info">
                 <h3>03: hand tools & fabrication</h3>
               </div>
-              <img class="img-fluid" src="03_mechanical/Thumbnail1square.jpg">
+              <img class="img-fluid" src="03_mechanical/Thumbnail.jpg">
             </a>
           </div>
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -119,15 +121,15 @@
               <img class="img-fluid" src="04_3D/thumbnail.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="05_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>05: microcontroller programming</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="05_microcontrollers/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>06: electronic input devices</h3>
@@ -194,8 +196,6 @@
         </div>
       </div>
     </section><!-- End  Works Section -->
-
-  
 
   </main><!-- End #main -->
 
