--- a/05_index.html
+++ b/05_index.html
@@ -114,6 +114,7 @@
             <img src="05_microcontrollers/circuitdrawing.jpg" alt="Image" class="img-fluid">
             <figcaption>PIN 5 - SERVO MOTOR<br>
               PIN 7,8,9,10,11,12 - LCD DISPLAY<br>
+              V0 OF LCD DISPLAY - MIDDLE TERMINAL OF POTENTIOMETER TO ADJUST SCREEN BRIGHTNESS
             </figcaption>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
