--- a/05_index.html
+++ b/05_index.html
@@ -131,8 +131,8 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50">
             <h2>Arduino code</h2>
             <pre><code class="language-arduino">
-#include <LiquidCrystal.h>
-#include <Servo.h>
+#include "LiquidCrystal.h"
+#include "Servo.h"
 
 Servo myservo; 
 
