--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
               <img class="img-fluid" src="05_microcontrollers/thumbnail.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="06_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>06: electronic input devices</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="06_sensors/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>07: CNC Milling, molding & casting</h3>
